@@ -821,13 +821,13 @@ char *PrintUsage(void)
     char msg0[] =
 	"Start R, a system for statistical computation and graphics, with the\nspecified options\n\nEnvVars: Environmental variables can be set by NAME=value strings\n\nOptions:\n  -h, --help            Print usage message and exit\n  --version             Print version info and exit\n  --encoding=enc        Specify encoding to be used for stdin\n  --encoding enc        ditto\n  --save                Do save workspace at the end of the session\n  --no-save             Don't save it\n",
 	msg1[] =
-	"  --no-environ          Don't read the site and user environment files\n  --no-site-file        Don't read the site-wide Rprofile\n  --no-init-file        Don't read the .Rprofile or ~/.Rprofile files\n  --restore             Do restore previously saved objects at startup\n  --no-restore-data     Don't restore previously saved objects\n  --no-restore-history  Don't restore the R history file\n  --no-restore          Don't restore anything\n",
+	"  --no-environ          Don't read the site and user environment files\n  --no-site-file        Don't read the site-wide Rprofile\n  --no-init-file        Don't read the .Rprofile or ~/.Rprofile files\n  --restore             Do restore previously saved objects at startup\n  --no-restore-data     Don't restore previously saved objects\n  --no-restore-history  Don't restore the R history file\n  --no-restore          Don't restore anything\n  --workspace=file      Workspace to be restored\n",
 	msg2[] =
 	"  --vanilla             Combine --no-save, --no-restore, --no-site-file,\n                          --no-init-file and --no-environ\n",
 	msg2b[] =
 	"  --max-mem-size=N      Set limit for memory to be used by R\n  --max-ppsize=N        Set max size of protect stack to N\n",
 	msg3[] =
-	"  -q, --quiet           Don't print startup message\n  --silent              Same as --quiet\n  --no-echo               Make R run as quietly as possible\n  --verbose             Print more information about progress\n  --args                Skip the rest of the command line\n",
+	"  -q, --quiet           Don't print startup message\n  --silent              Same as --quiet\n  --no-echo             Make R run as quietly as possible\n  --verbose             Print more information about progress\n  --args                Skip the rest of the command line\n",
 	msg4[] =
 	"  --ess                 Don't use getline for command-line editing\n                          and assert interactive use\n  -f file               Take input from 'file'\n  --file=file           ditto\n  -e expression         Use 'expression' as input\n\nOne or more -e options can be used, but not together with -f or --file\n",
 	msg5[] = "\nAn argument ending in .RData (in any case) is taken as the path\nto the workspace to be restored (and implies --restore)";
@@ -875,6 +875,37 @@ static int isDir(char *path)
 	isdir &= (access(path, W_OK) == 0);
     }
     return isdir;
+}
+
+static Rboolean use_workspace(Rstart Rp, char *name, Rboolean usedRdata)
+{
+    char s[1024];
+    char path[MAX_PATH];
+    char *p;
+
+    if(!usedRdata) {
+	if (strlen(name) >= MAX_PATH) {
+	     /* if generated by Windows it must fit */
+	    snprintf(s, 1024, _("Workspace name '%s' is too long\n"), name);
+	    R_ShowMessage(s);
+	} else {
+	    set_workspace_name(name);
+	    strcpy(path, name);
+	    for (p = path; *p; p++) if (*p == '\\') *p = '/';
+	    p = Rf_strrchr(path, '/');
+	    if(p) {
+		*p = '\0';
+		chdir(path);
+	    }
+	    usedRdata = TRUE;
+	    Rp->RestoreAction = SA_RESTORE;
+	    return TRUE;
+	}
+    } else {
+	snprintf(s, 1024, _("ARGUMENT '%s' __ignored__\n"), name);
+	R_ShowMessage(s);
+    }
+    return FALSE;
 }
 
 int cmdlineoptions(int ac, char **av)
@@ -1121,6 +1152,8 @@ int cmdlineoptions(int ac, char **av)
 			R_Suicide(s);
 		    }
 		}
+	    } else if (!strncmp(*av, "--workspace=", 12)) {
+		usedRdata = use_workspace(Rp, *av + 12, usedRdata);
 	    } else if(CharacterMode == RTerm && !strcmp(*av, "-e")) {
 		ac--; av++;
 		if (!ac || !strlen(*av)) {
@@ -1143,25 +1176,9 @@ int cmdlineoptions(int ac, char **av)
 	} else {
 	    /* Look for *.RData, as given by drag-and-drop 
 	       and file association */
-	    char path[MAX_PATH];
 
-	    if(!usedRdata &&
-	       strlen(*av) >= 6 &&
-	       stricmp(*av+strlen(*av)-6, ".RData") == 0) {
-		set_workspace_name(*av);
-		strcpy(path, *av); /* this was generated by Windows so must fit */
-		for (p = path; *p; p++) if (*p == '\\') *p = '/';
-		p = Rf_strrchr(path, '/');
-		if(p) {
-		    *p = '\0';
-		    chdir(path);
-		}
-		usedRdata = TRUE;
-		Rp->RestoreAction = SA_RESTORE;
-	    } else {
-		snprintf(s, 1024, _("ARGUMENT '%s' __ignored__\n"), *av);
-		R_ShowMessage(s);
-	    }
+	    if (strlen(*av) >= 6 && stricmp(*av+strlen(*av)-6, ".RData") == 0)
+		usedRdata = use_workspace(Rp, *av, usedRdata);
 	}
     }
     if(strlen(cmdlines)) {
